List of user-visible changes of Ratfor Testsuite.

New in XXX
-----------
 * We don't ship a ChangeLog file anymore.  The ChangeLog was generated
   from git history anyway, so nothing is lost with this decision.

New in 0.9i
-----------
 * The rules creating the generated test script should now work portably.
 * Extended tests on `break' and `next' keywords, esp. by checking that
   they work as advised when the optional integer argument is present.
 * Added tests checking that nested "for", "while" and "switch" statements
   work as expected.
 * Added tests checking that ratfor comments are not terminated by
   semicolons or right curly brackets.
 * Much better and more extensive tests on the "repeat/until" statement.
 * Added tests checking that ratfor statements with empty bodies (e.g.
   "if(cond);" or "while(cond){}") work as expected.
 * Added tests checking that ratfor correctly complains when parentheses
   are missing after keywords that require them (e.g. "if" and "until").
 * Added tests checking that the `break' and `next' ratfor keywords are
   recognized and processed when placed after a numerical label, and are
   not recognized/processed when placed in the middle of a statement (we
   should have added this checks previously, but they were forgotten out,
   somehow).
 * In test scripts: ensure that no shell builtin is run where an external
   command is expected.  This fixes a weird bug occurring when a Fortran
   compiler named `fc' was used, as it could collide with the `fc' builtin
   on Korn shells.
 * Fixed a couple of minor bugs in test scripts and data files.
 * Fixed spurious failures w.r.t. some shells, as Almquist Shell and Bash
   2.0.

New in 0.9h
-----------
 * Added and extended tests regarding Ratfor keywords.  In particular,
   there are tests checking that (most of) those keywords (e.g. `while',
   `for', `if') are recognized and processed when placed after a numerical