@@ -2,6 +2,8 @@ List of user-visible changes of Ratfor Testsuite.
 
 New in XXX
 -----------
+ * Generated tests are now distributed, so that they won't need to be
+   re-generated on the user system.
  * We don't ship a ChangeLog file anymore.  The ChangeLog was generated
    from git history anyway, so nothing is lost with this decision.
 
